The most changes was made in descriptive texts

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,13 +5,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
-        The website was created as pracital part of thesis. This thesis has a
-        educational meaning. We implemented attacks to classical historical
-        ciphers. Brute force attack to Caesar cipher, attack to Vigenere cipher
-        with statistics of language, solving of monoalphabetic cipher using Hill
-        Climbing alghorithm. The important part of this thesis is graphic
-        representation of attack. The effectuivity and speed is not to
-        important.
+        The website was created as a practical part of the thesis. This thesis has an educational meaning. 
+        We implemented attacks on classical historical ciphers. 
+        Brute force attack to Caesar cipher, attack to Vigenere cipher with statistics of language, solving of monoalphabetic cipher using Hill Climbing algorithm. 
+        The important part of this thesis is a graphic representation of attack. Effectivity and speed are not important.
       </p>
     </mat-card-content>
   </mat-card>
@@ -21,8 +18,7 @@
       <mat-card-title>The legend for pages</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        The card are distinguished by color of left border.
-          
+      The cards are distinguished by the color of the left border or background.          
         <br>
         <br>
 
@@ -32,7 +28,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-               There you can find thery about cipher, how alghorithm works, ...
+                There you can find the theory about cipher, how the algorithm works, ...
               </p>
             </mat-card-content>
           </mat-card>
@@ -45,7 +41,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-               In this card you can do some action, start calculation, set up paramaters of alghorithm, ...
+                In this card, you can do some action, start the calculation, set up parameters of the algorithm, ...
               </p>
             </mat-card-content>
           </mat-card>
@@ -58,7 +54,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-               In this card you find computed data which brings us to crack cirpher.
+                In this card you find computed data which brings us to crack the cipher.
               </p>
             </mat-card-content>
           </mat-card>
