--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <mat-card class="col-md-12 info-mat-card">
       <mat-card-header>
-        <mat-card-title>Description of Caesar Cipher</mat-card-title>
+        <mat-card-title>Description of cipher</mat-card-title>
       </mat-card-header>
       <mat-card-content style="word-wrap: break-word;">
         <div class="  ">
@@ -83,7 +83,7 @@
 
           <mat-card-actions>
             <button class="btn btn-sm btn-action" (click)="enDeCryptMessage()">
-              Generate
+              En/Decrypt Text & Run the attack
             </button>
           </mat-card-actions>
         </mat-card>
@@ -123,7 +123,7 @@
       <div class="row">
         <mat-card id="attack" class="col-md-12 info-mat-card">
           <mat-card-header>
-            <mat-card-title>Description of Attack</mat-card-title>
+            <mat-card-title>Description of attack</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <div>
@@ -266,7 +266,7 @@
         <mat-card id="compare" class="col-md-12 computed-mat-card">
           <mat-card-header>
             <mat-card-title
-              >Compare Language accuracy of the message with real data
+              >Comparsion of language frequencies from the message with real data
               </mat-card-title
             >
           </mat-card-header>
