--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -102,6 +102,15 @@
                   Please, text must include letters a-z or A-Z.
                 </mat-error>
               </mat-form-field>
+              <p>
+                <br>
+                For remove accents and punctuation from text, you can use
+                <a
+                  href="https://manulab.hcportal.eu/example/index.html"
+                  target="_blank"
+                  >HcPortal app</a
+                >.
+              </p>
             </form>
           </mat-card-content>
 
