Changed responz. of layout

--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="col-md-10 offset-md-1 mode-down">
+<mat-sidenav-container class="col-md-12 col-xl-10 offset-xl-1 mode-down">
   <mat-sidenav
     #sidenav
     mode="side"
@@ -22,7 +22,7 @@
   </mat-sidenav>
   <mat-sidenav-content
     [style.margin-top.px]="topGap2 + 20"
-    class="content remove-left-margin col-md-10"
+    class="content remove-left-margin col-md-12 col-xl-10"
   >
     <ng-content> </ng-content>
   </mat-sidenav-content>
