--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
@@ -18,11 +18,12 @@
     <br />
     <br />
     <br />
+    <br />
 
     <br />
     <div class="container">
       <div class="row">
-        <div class="col-md-5 offset-md-4">
+        <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-5 offset-lg-4">
           <div
             *ngIf="passedMinIc; else notPassed"
             class="alert alert-danger"
