--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.scss
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.scss
@@ -11,4 +11,10 @@
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 576px) {
+  .container {
+      padding: 0 !important;
+      margin: 0 !important;
+  }
+}
 
