Fix issues on small devices

--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -130,8 +130,8 @@
 
       <br />
     </div>
-    <div class="container">
-      <div class="row">
+    <div class="">
+      <div class="">
         <mat-card  id="findKey" class="info-mat-card col-md-12">
           <mat-card-header>
             <mat-card-title
@@ -171,7 +171,7 @@
       </div>
 
       <br />
-      <div class="row">
+      <div class="">
         <mat-card id="attack" class="col-md-12 action-mat-card">
           <mat-card-header>
             <mat-card-title>Custom and run attack</mat-card-title>
@@ -240,7 +240,7 @@
       <br />
 
       <div
-        class="row"
+        class=""
         *ngIf="theBestGuess"
         [ngClass]="{ hide: !calcDone, show: calcDone }"
       >
@@ -350,8 +350,8 @@
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
+    <div class="">
+      <div class="">
         <mat-card  
           class="text-center col-md-12"
           [ngClass]="{ hide: calcDone, show: !calcDone }"
