--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.scss
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.scss
@@ -6,4 +6,10 @@
   display: inline-block;
 }
 
+@media screen and (max-width: 992px) {
+  .container {
+      padding: 0 !important;
+      margin: 0 !important;
+  }
+}
 
