Fixed grammatical mistakes

--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
@@ -6,7 +6,7 @@
       </mat-card-header>
       <mat-card-content style="word-wrap: break-word;">
         <div class="  ">
-          The main function of Caesar Cipher is replace every letter in message
+          The main function of Caesar Cipher is replace every letter in a message
           with diferent letter. Different letter is shift by n letters in 26
           alpahabet. For example: when we use shift 2, a will be c.
         </div>
@@ -82,8 +82,8 @@
                 <a
                   href="https://manulab.hcportal.eu/example/index.html"
                   target="_blank"
-                  >HcPortal app</a
-                >.
+                  >ManuLab online</a
+                > tool.
               </p>
             </form>
           </mat-card-content>
