--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
         </mat-card-header>
         <mat-card-content>
           <p>
-            Caesar Cipher is replacing every letter in message with a different letter. 
+            Caesar Cipher is replacing every letter in a message with a different letter. 
             We try to find a shift, with text analysis.
             Then we use a brute force attack to find a decrypted message.
             We use the index of coincidence and frequencies of decrypted text to evaluate the correctness of the decrypted message.
@@ -48,7 +48,7 @@
         </mat-card-header>
         <mat-card-content>
           <p>
-            Vigenere Cipher using a series of Caesar ciphers, based on the letters of a keyword. We try to find a key, with text analysis. 
+            Vigenere Cipher is using a series of Caesar ciphers, based on the letters of a keyword. We try to find a key, with text analysis. 
             We use the index of coincidence and frequencies of letters to find a key.
           </p>
         </mat-card-content>
