--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -83,10 +83,10 @@
                   <br>
                   For remove accents and punctuation from text, you can use
                   <a
-                    href="https://manulab.hcportal.eu/example/index.html"
-                    target="_blank"
-                    >HcPortal app</a
-                  >.
+                  href="https://manulab.hcportal.eu/example/index.html"
+                  target="_blank"
+                  >ManuLab online</a
+                > tool.
                 </p>
               </form>
             </mat-card-content>
@@ -144,7 +144,7 @@
               use a brute force attack, but meta-heuristic algorithm can be
               useful.
             </p>
-            We use Hill Climbing alghorithm, which consists of these steps.
+            We use Hill Climbing alghorithm, which consists of these steps:
             <ul style="list-style-type: disc;">
               <li>
                 swap 2 letters of key and compute freguencies of bigrams
@@ -338,7 +338,7 @@
           </mat-card-header>
           <mat-card-content>
             On the graph we can see, increase or decrease of the Match rate during iterations. The value represents an increase/decrease of Match rate (in percentage) compare to previous better guess/step.
-            <p>The last iteration is also important. It is iterations when we find out the best solution. With this information we can set up the algorithm more precisely.</p>
+            <p>The last iteration is also important. It is iterations, when we find out the best solution. With this information we can set up the algorithm more precisely.</p>
             
             <app-graph
               #matchRateIncrease
