--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -109,8 +109,8 @@
                 <a
                   href="https://manulab.hcportal.eu/example/index.html"
                   target="_blank"
-                  >HcPortal app</a
-                >.
+                  >ManuLab online</a
+                > tool.
               </p>
             </form>
           </mat-card-content>
@@ -259,7 +259,7 @@
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <div class="col-md-12">
-              We do it only for key of length <2,3> because we compute all possibilities on client
+              We do it only for key of length <2,3>, because we compute all possibilities on client
               computer. Key of length has 26<sup>3</sup> = 17,576‬ possible keys, but key
               of length 4 has 26^4 has 456 976 keys.
               <br />
