Fixed grammatical mistakes 2

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,10 +5,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
-        The website was created as a practical part of the thesis. This thesis has an educational meaning. 
+        This website was created as a practical part of the thesis. This thesis has the educational meaning. 
         We implemented attacks on classical historical ciphers. 
-        Brute force attack to Caesar cipher, attack to Vigenere cipher with statistics of language, solving of monoalphabetic cipher using Hill Climbing algorithm. 
-        The important part of this thesis is a graphic representation of attack. Effectivity and speed are not important.
+        Brute force attack on Ceasar cipher, attack on Vigenere cipher with the statistics of language, solving of the monoalphabetic cipher by using a Hill climbing. 
+        The important part of this thesis are graphical representations of attacks. An effectivity and a speed are not important.
       </p>
     </mat-card-content>
   </mat-card>
@@ -18,7 +18,7 @@
       <mat-card-title>The legend for pages</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      The cards are distinguished by the color of the left border or background.          
+      The cards are distinguished by the color of the left border or the background.          
         <br>
         <br>
 
@@ -28,7 +28,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-                There you can find the theory about cipher, how the algorithm works, ...
+                There you can find a theory about a cipher, how the algorithm works, ...
               </p>
             </mat-card-content>
           </mat-card>
@@ -41,7 +41,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-                In this card, you can do some action, start the calculation, set up parameters of the algorithm, ...
+                In this card, you can do some action like start the calculation, set up algorithm parameters, ...
               </p>
             </mat-card-content>
           </mat-card>
@@ -54,7 +54,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-                In this card you find computed data which brings us to crack the cipher.
+                In this card you can see the computed data which is used for cracking the cipher.
               </p>
             </mat-card-content>
           </mat-card>
