--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -4,15 +4,13 @@
     <div >
       <mat-card  class="col-md-12 info-mat-card">
         <mat-card-header>
-          <mat-card-title>Description of cipher</mat-card-title>
+          <mat-card-title>Description of the cipher</mat-card-title>
         </mat-card-header>
         <mat-card-content style="word-wrap: break-word;">
           <div class="col-md-8 col-md-offset-2">
             <p>
-              Monoalphabetic cipher is a substitution cipher, which the key is
-              randomly arranged alphabet. For example, if 'B' is encrypted as
-              'L', for any number of occurrence in that plaintext, 'B' will
-              always get encrypted to 'L'.
+              Monoalphabetic cipher is a substitution cipher, which key is
+              randomly arranged alphabet.For example, if “B” is encrypted as “L”, for any number of the occurence in plaintext, “B”will be always encrypted to “L”. 
             </p>
           </div>
         </mat-card-content>
@@ -135,16 +133,16 @@
         <mat-card  id="findKey" class="info-mat-card col-md-12">
           <mat-card-header>
             <mat-card-title
-              >Find decryption key with Hill Climbing alghorithm</mat-card-title
+              >Find decryption key with the Hill climbing algorithm</mat-card-title
             >
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <p>
-              Monoalphabetic cipher has to much combinations of key. We can't
+              Monoalphabetic cipher has many combinations of key. We can't
               use a brute force attack, but meta-heuristic algorithm can be
               useful.
             </p>
-            We use Hill Climbing alghorithm, which consists of these steps:
+            We use Hill climbing algorithm, which consists of these steps:
             <ul style="list-style-type: disc;">
               <li>
                 swap 2 letters of key and compute freguencies of bigrams
@@ -155,16 +153,14 @@
               </li>
               <li>save only better result</li>
               <li>
-                if we got better result then in next step we use this key from
-                better result.
+                if we get better result then at the next step we will use this obtained key
               </li>
             </ul>
-            <p>These steps we repeat for n times/number iterations.</p>
+            <p>We repeat these steps for n times/number iterations.</p>
 
             <p>
               You can set the number of iterations in the tab below and the
-              number of attempts. The number of attempts represents which times
-              this whole Hill climbing will run.
+              number of attempts. The number of attempts represents how many times this whole Hill climbing algorithm will be run.
             </p>
           </mat-card-content>
         </mat-card>
@@ -177,7 +173,7 @@
             <mat-card-title>Custom and run attack</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
-            We generate random key for Hill Climbing
+            We generate random key for Hill climbing
             <p>
               <b>We generate random key {{ rndKey }}</b> <br />
               <b>We try to find key {{ keys.decKey }}</b>
@@ -246,7 +242,7 @@
       >
         <mat-card class="col-md-12 computed-mat-card">
           <mat-card-header>
-            <mat-card-title>The best finded key</mat-card-title>
+            <mat-card-title>The best found key</mat-card-title>
             <mat-card-subtitle> {{ theBestGuess.key }} </mat-card-subtitle>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
@@ -270,21 +266,18 @@
           <mat-card class="computed-mat-card">
             <mat-card-header>
               <mat-card-title
-                >Evolution of sum and match rate during iterations, only for the
-                best guess
+                >Evolution of sum and Match rate during iterations, only for the
+                best estimate
               </mat-card-title>
             </mat-card-header>
 
             <mat-card-content>
               We can evalute this results with Match rate and Sum. 
-              <p> <b>The Match rate</b> is
-                how much letters from decrypted text match with letters from input
-                message. For example the input message is "abcd". With some guess
-                key decrypted message is "abhg". Between these strings only two
-                letters out of four match, so Match rate is 0,5.
+              <p> <b>The Match rate</b>  is defined as a result of how many letters from decrypted text match to letters from input message. For example the input message is "abcd".
+                 With some estimate key decrypted message is "abhg". Between these strings only two letter got matched, so M  atch rate is 0,5.
               </p>
               <p>
-                <b>The sum </b>is the difference between calculated frequencies (the frequency for every letter separately) and referral values
+                <b>The sum </b> is a score calculated as a difference between calculated frequencies of bigrams and referral values
                 for English alphabet.
               </p>
 
@@ -313,12 +306,12 @@
         <mat-card  id="compareBigrams" class="computed-mat-card">
           <mat-card-header>
             <mat-card-title>
-              Comparsion of score and match rate by iterations
+              Comparsion of score and Match rate by iterations
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            On the graph we can see, that Match rate during iterations increase and sum decrease.
-            <p>The last iteration is also important. It is iterations when we find out the best solution. With this information we can set up the algorithm more precisely.</p>
+            On the graph we can see, that the Match rate increases during iterations and the sum decreases. 
+            <p>The last iteration is the most important. There we can find the best solution. With this information we can set up the algorithm more precisely.</p>
             
             <app-graph
               #iterScoreGraph
@@ -337,8 +330,8 @@
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            On the graph we can see, increase or decrease of the Match rate during iterations. The value represents an increase/decrease of Match rate (in percentage) compare to previous better guess/step.
-            <p>The last iteration is also important. It is iterations, when we find out the best solution. With this information we can set up the algorithm more precisely.</p>
+            In this graph we can see how to increase or decrease the Match rate during iterations. The value represents an increasing/decreasing matchRate (in percentage) compared to previous better estimate/step.
+            <p>The last iteration is the most important. There we can find the best solution. With this information we can set up the algorithm more precisely.</p>
             
             <app-graph
               #matchRateIncrease
