--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -2,17 +2,17 @@
   <div class="container">
     <mat-card class="col-md-12 info-mat-card">
       <mat-card-header>
-        <mat-card-title>Description of cipher</mat-card-title>
+        <mat-card-title>Description of the cipher</mat-card-title>
       </mat-card-header>
       <mat-card-content style="word-wrap: break-word;">
         <div class="">
-          The Vigenere Cipher is a method of encrypting alphabetic text by using
+          The Vigenere cipher is a method of encrypting alphabetic text by using
           a series of Caesar ciphers, based on the letters of a keyword. In a
           Caesar cipher, each letter of the alphabet is shifted by several
           places.
           <p>
-            For example, in a Caesar cipher with shift 3, „A“ would become „D“,
-            „B“ would become „E“, „Y“ would become „B“ and so on. The Vigenere
+            For example, in a Caesar cipher with shift 3, “A“ would become “D“,
+            “B“ would become “E“, “Y“ would become “B“ and so on. The Vigenere
             cipher uses several Caesar ciphers in sequence with different shift
             values.
           </p>
@@ -138,7 +138,7 @@
           <mat-card-content style="word-wrap: break-word;">
             <div>
               In tab "Encrypted Text" we highlight with the same color letters
-              which have the same shift.
+              which have the same shift value.
             </div>
           </mat-card-content>
         </mat-card>
@@ -179,21 +179,21 @@
       <div class="row">
         <mat-card id="alghorithm" class="col-md-12 info-mat-card">
           <mat-card-header>
-            <mat-card-title>Alghorithm to find length of key</mat-card-title>
+            <mat-card-title>Algorithm to find the length of key</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <div class="col-md-8 col-md-offset-2">
-              We try find length of key with Friedman test.
-              <p>Basically, Friedman test is when we separate text into boxes, number of boxes is length of key.
-                For example when we have key of length 3 boxe, in first box will
-                be first letter from encrypted text(CT), in second box second
-                letter form CT, in third box third letter of CT. Then we repeat
-                and in first box will be fourth letter of CT, in second box will
-                be fifth letter and so on.
+              We try find the length of key with Friedman test.
+              <p>Basically, in Friedman test we separate text into boxes, the number of boxes is equal to the length of key.
+                Basically, in Friedman test we separate text into boxes, the number of boxes is equal to the length of key.
+                For example when we have the key of length equal 3 boxes, 
+                in the first box will be the first letter, 
+                in the second box will be the second and in the third one will be the third letter of encrypted text (CT). 
+                Then we repeat it and in the first box will be the fourth letter of CT, in the second box will be the fifth letter and so on.
               </p>
-              Then we compute the frequency of every box and Index Coincidence(IC). 
-              For boxes we compute the average of ICs. We repeat these steps and we compute average 
-              ICs for the key of length <2,16> In this example we expect that text is in the English language.
+              Then we compute the frequency of every box and index coincidence(IC). 
+              For boxes we compute the average of ICs. Than we repeat these steps and   compute average 
+              ICs for the key of length <2,16> In this example we expect that the text is in English.
             </div>
           </mat-card-content>
         </mat-card>
@@ -235,15 +235,14 @@
       <div class="row">
         <mat-card id="attack" class="col-md-12 info-mat-card">
           <mat-card-header>
-            <mat-card-title>Description of attack</mat-card-title>
+            <mat-card-title>Description of the attack</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <div>
-              We try to decrypt message and find out the key of encrypted message. 
-              We use the guess of length from the previous step. 
-              We decrypt message for all combination and we calculate a score for this message.
+              We try to decrypt message and find out the key of the encrypted message. 
+              We use the estimate of length from the previous step. We decrypt the message for all combinations and calculate a score for this message.
               The score function is calculated as differences between frequencies of letters (decrypted message) and referral values of the English language.
-              Finally, the score function sum these differences and this is the score for one key.
+              Finally, the score function sum these differences and this is the score for the one key.
               We expect that the lowest score determines the key, which we are looking for. The frequencies of the correct message will be similar to referral values.
             </div>
           </mat-card-content>
@@ -255,12 +254,12 @@
       <div class="row">
         <mat-card id="allcombinations" class="col-md-12 computed-mat-card">
           <mat-card-header>
-            <mat-card-title>Compute all combinations for key</mat-card-title>
+            <mat-card-title>Compute all combinations of the key</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <div class="col-md-12">
-              We do it only for key of length <2,3>, because we compute all possibilities on client
-              computer. Key of length has 26<sup>3</sup> = 17,576‬ possible keys, but key
+              We do it only for the key of length <2,3>, because we compute allpossibilities on the client computer.
+              Key of length has 26<sup>3</sup> = 17,576‬ possible keys, but key
               of length 4 has 26^4 has 456 976 keys.
               <br />
               <br />
